--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 200px; /* adjust height of blur area */
+    height: 200px;
     background: linear-gradient(to bottom, transparent, rgb(38, 37, 37));
     pointer-events: none;
 }
